--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>CRUD-WebDev</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Jogadoras do Futebol Feminino</h1>
+      <input type="text" placeholder="Insira nome ou posição" />
+      <button id="btnMultiUse">BOTAÇO</button>
+    </header>
+    <div id="PlayersCards"></div>
+  </body>
   <script src="app.js"></script>
 </html>
