--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header id="headFunc">
       <h1>Jogadoras do Futebol Feminino</h1>
       <input type="text" placeholder="Insira nome ou posição" />
       <button id="btnMultiUse">BOTAÇO</button>
+      <button id="btnCreate">Criar</button>
     </header>
     <div id="PlayersCards"></div>
   </body>
