feat/style e imagens

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <header id="headFunc">
       <h1>Jogadoras do Futebol Feminino</h1>
-      <input type="text" placeholder="Insira nome ou posição" />
-      <button id="btnMultiUse">BOTAÇO</button>
+      <input id="searchBar" type="text" placeholder="Insira nome ou posição" />
       <button id="btnCreate">Criar</button>
     </header>
     <div id="PlayersCards"></div>
